--- a/sphinx_rtd_theme/layout.html
+++ b/sphinx_rtd_theme/layout.html
@@ -197,10 +197,19 @@
         <li>
           <div style="background-color: white; font-size: 16px; font-weight: 600; margin-left: 40px" class="w3-dropdown-hover">
             <button class="w3-button">Learn <span class="triangle">▾</span></button>
-            <div style="margin-left: -15px" class="w3-dropdown-content w3-bar-block w3-card-4">
-              <a href="https://cilium.io/get-started" class="w3-bar-item w3-button">Get Started</a>
-              <a href="https://cilium.io/get-involved" class="w3-bar-item w3-button">Get Involved</a>
-              <a href="https://cilium.io/get-help" class="w3-bar-item w3-button">Get Help</a>
+            <div class="w3-dropdown-content w3-bar-block w3-card-4">
+              <a style = "margin-left: 0px;" href="https://cilium.io/get-started" class="w3-bar-item w3-button">
+                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/cilium.io/main/src/icons/get-started.inline.svg" alt="get-started-icon">
+                Get Started
+              </a>
+              <a style = "margin-left: 0px;" href="https://cilium.io/get-involved" class="w3-bar-item w3-button">
+                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/cilium.io/main/src/icons/get-involved.inline.svg" alt="get-involved-icon">
+                Get Involved
+              </a>
+              <a style = "margin-left: 0px;" href="https://cilium.io/get-help" class="w3-bar-item w3-button">
+                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/cilium.io/main/src/icons/get-help.inline.svg" alt="get-help-icon">
+                Get Help
+              </a>
             </div>
           </div>
         
@@ -208,11 +217,23 @@
         <li>
           <div style="background-color: white; font-size: 16px;font-weight: 600; margin-left: 40px" class="w3-dropdown-hover">
             <button class="w3-button">News and media <span class="triangle">▾</span></i></button>
-            <div style="margin-left: -15px" class="w3-dropdown-content w3-bar-block w3-card-4">
-              <a href="https://cilium.io/adopters" class="w3-bar-item w3-button">Adopters</a>
-              <a href="https://cilium.io/blog" class="w3-bar-item w3-button">Blog</a>
-              <a href="https://github.com/cncf/artwork/blob/master/examples/incubating.md#cilium-logos" class="w3-bar-item w3-button">Branding</a>
-              <a href="https://cilium.io/newsletter" class="w3-bar-item w3-button">Newsletter</a>
+            <div class="w3-dropdown-content w3-bar-block w3-card-4">
+              <a style = "margin-left: 0px;" href="https://cilium.io/adopters" class="w3-bar-item w3-button">
+                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/cilium.io/main/src/icons/adopters.inline.svg" alt="adopters-icon">
+                Adopters
+              </a>
+              <a style = "margin-left: 0px;" href="https://cilium.io/blog" class="w3-bar-item w3-button">
+                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/cilium.io/main/src/icons/blog.inline.svg" alt="blog-icon">
+                Blog
+              </a>
+              <a style = "margin-left: 0px;" href="https://github.com/cncf/artwork/blob/master/examples/incubating.md#cilium-logos" class="w3-bar-item w3-button">
+                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/cilium.io/main/src/icons/branding.inline.svg" alt="branding-icon">
+                Branding
+              </a>
+              <a style = "margin-left: 0px;" href="https://cilium.io/newsletter" class="w3-bar-item w3-button">
+                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/cilium.io/main/src/icons/newsletter.inline.svg" alt="newsletter-icon">
+                Newsletter
+              </a>
             </div>
           </div>
 
