Update Documentation link to stable branch

--- a/sphinx_rtd_theme/layout.html
+++ b/sphinx_rtd_theme/layout.html
@@ -238,7 +238,7 @@
           </div>
 
         </li>
-        <li><a href="https://docs.cilium.io">Documentation</a></li>
+        <li><a href="https://docs.cilium.io/en/stable/">Documentation</a></li>
       </ul>
     </nav>
   </header>
