Add SVGs locally
Update URL

--- a/sphinx_rtd_theme/layout.html
+++ b/sphinx_rtd_theme/layout.html
@@ -182,7 +182,7 @@
                 target="_blank"
                 style="margin-left: 15px;"
               >
-                <img style="height: 1em;" src="https://raw.githubusercontent.com/cilium/cilium.io/main/src/icons/slack.inline.svg" alt="slack_icon">
+                <img style="height: 1em;" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/slack.inline.svg" alt="slack_icon">
                 <span class="gh-text">Join Slack</span>
             </a>
             </span>
@@ -199,15 +199,15 @@
             <button class="w3-button">Learn <span class="triangle">▾</span></button>
             <div class="w3-dropdown-content w3-bar-block w3-card-4">
               <a style = "margin-left: 0px;" href="https://cilium.io/get-started" class="w3-bar-item w3-button">
-                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/cilium.io/main/src/icons/get-started.inline.svg" alt="get-started-icon">
+                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/get-started.inline.svg" alt="get-started-icon">
                 Get Started
               </a>
               <a style = "margin-left: 0px;" href="https://cilium.io/get-involved" class="w3-bar-item w3-button">
-                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/cilium.io/main/src/icons/get-involved.inline.svg" alt="get-involved-icon">
+                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/get-involved.inline.svg" alt="get-involved-icon">
                 Get Involved
               </a>
               <a style = "margin-left: 0px;" href="https://cilium.io/get-help" class="w3-bar-item w3-button">
-                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/cilium.io/main/src/icons/get-help.inline.svg" alt="get-help-icon">
+                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/get-help.inline.svg" alt="get-help-icon">
                 Get Help
               </a>
             </div>
@@ -219,19 +219,19 @@
             <button class="w3-button">News and media <span class="triangle">▾</span></i></button>
             <div class="w3-dropdown-content w3-bar-block w3-card-4">
               <a style = "margin-left: 0px;" href="https://cilium.io/adopters" class="w3-bar-item w3-button">
-                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/cilium.io/main/src/icons/adopters.inline.svg" alt="adopters-icon">
+                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/adopters.inline.svg" alt="adopters-icon">
                 Adopters
               </a>
               <a style = "margin-left: 0px;" href="https://cilium.io/blog" class="w3-bar-item w3-button">
-                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/cilium.io/main/src/icons/blog.inline.svg" alt="blog-icon">
+                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/blog.inline.svg" alt="blog-icon">
                 Blog
               </a>
               <a style = "margin-left: 0px;" href="https://github.com/cncf/artwork/blob/master/examples/incubating.md#cilium-logos" class="w3-bar-item w3-button">
-                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/cilium.io/main/src/icons/branding.inline.svg" alt="branding-icon">
+                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/branding.inline.svg" alt="branding-icon">
                 Branding
               </a>
               <a style = "margin-left: 0px;" href="https://cilium.io/newsletter" class="w3-bar-item w3-button">
-                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/cilium.io/main/src/icons/newsletter.inline.svg" alt="newsletter-icon">
+                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/newsletter.inline.svg" alt="newsletter-icon">
                 Newsletter
               </a>
             </div>
