--- a/sphinx_rtd_theme/layout.html
+++ b/sphinx_rtd_theme/layout.html
@@ -198,16 +198,16 @@
           <div style="background-color: white; font-size: 16px; font-weight: 600; margin-left: 40px" class="w3-dropdown-hover">
             <button class="w3-button">Learn <span class="triangle">▾</span></button>
             <div class="w3-dropdown-content w3-bar-block w3-card-4">
-              <a style = "margin-left: 0px;" href="https://cilium.io/get-started" class="w3-bar-item w3-button">
-                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/get-started.inline.svg" alt="get-started-icon">
+              <a style = "margin-left: 0px; display: inline-flex;" href="https://cilium.io/get-started" class="w3-bar-item w3-button">
+                <img style="height: 1.5em; margin-right: .5em" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/get-started.inline.svg" alt="get-started-icon">
                 Get Started
               </a>
-              <a style = "margin-left: 0px;" href="https://cilium.io/get-involved" class="w3-bar-item w3-button">
-                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/get-involved.inline.svg" alt="get-involved-icon">
+              <a style = "margin-left: 0px; display: inline-flex;" href="https://cilium.io/get-involved" class="w3-bar-item w3-button">
+                <img style="height: 1.5em; margin-right: .5em" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/get-involved.inline.svg" alt="get-involved-icon">
                 Get Involved
               </a>
-              <a style = "margin-left: 0px;" href="https://cilium.io/get-help" class="w3-bar-item w3-button">
-                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/get-help.inline.svg" alt="get-help-icon">
+              <a style = "margin-left: 0px; display: inline-flex;" href="https://cilium.io/get-help" class="w3-bar-item w3-button">
+                <img style="height: 1.5em; margin-right: .5em" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/get-help.inline.svg" alt="get-help-icon">
                 Get Help
               </a>
             </div>
@@ -218,20 +218,20 @@
           <div style="background-color: white; font-size: 16px;font-weight: 600; margin-left: 40px" class="w3-dropdown-hover">
             <button class="w3-button">News and media <span class="triangle">▾</span></i></button>
             <div class="w3-dropdown-content w3-bar-block w3-card-4">
-              <a style = "margin-left: 0px;" href="https://cilium.io/adopters" class="w3-bar-item w3-button">
-                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/adopters.inline.svg" alt="adopters-icon">
+              <a style = "margin-left: 0px; display: inline-flex;" href="https://cilium.io/adopters" class="w3-bar-item w3-button">
+                <img style="height: 1.5em; margin-right: .5em" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/adopters.inline.svg" alt="adopters-icon">
                 Adopters
               </a>
-              <a style = "margin-left: 0px;" href="https://cilium.io/blog" class="w3-bar-item w3-button">
-                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/blog.inline.svg" alt="blog-icon">
+              <a style = "margin-left: 0px; display: inline-flex;" href="https://cilium.io/blog" class="w3-bar-item w3-button">
+                <img style="height: 1.5em; margin-right: .5em" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/blog.inline.svg" alt="blog-icon">
                 Blog
               </a>
-              <a style = "margin-left: 0px;" href="https://github.com/cncf/artwork/blob/master/examples/incubating.md#cilium-logos" class="w3-bar-item w3-button">
-                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/branding.inline.svg" alt="branding-icon">
+              <a style = "margin-left: 0px; display: inline-flex;" href="https://github.com/cncf/artwork/blob/master/examples/incubating.md#cilium-logos" class="w3-bar-item w3-button">
+                <img style="height: 1.5em; margin-right: .5em" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/branding.inline.svg" alt="branding-icon">
                 Branding
               </a>
-              <a style = "margin-left: 0px;" href="https://cilium.io/newsletter" class="w3-bar-item w3-button">
-                <img style="height: 1.5em;" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/newsletter.inline.svg" alt="newsletter-icon">
+              <a style = "margin-left: 0px; display: inline-flex;" href="https://cilium.io/newsletter" class="w3-bar-item w3-button">
+                <img style="height: 1.5em; margin-right: .5em" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/newsletter.inline.svg" alt="newsletter-icon">
                 Newsletter
               </a>
             </div>
