Add color change on hover

--- a/sphinx_rtd_theme/layout.html
+++ b/sphinx_rtd_theme/layout.html
@@ -182,7 +182,7 @@
                 target="_blank"
                 style="margin-left: 15px;"
               >
-                <img style="height: 1em;" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/slack.inline.svg" alt="slack_icon">
+                <img style="height: 1em;" src="/docs/_static/icons/slack.inline.svg" alt="slack_icon">
                 <span class="gh-text">Join Slack</span>
             </a>
             </span>
@@ -193,21 +193,21 @@
       <input name="wy-main-nav-checkbox" id="wy-main-nav-checkbox" class="wy-main-nav-checkbox" type="checkbox">
       <label for="wy-main-nav-checkbox" class="wy-main-nav-toggle">Menu</label>
       <ul id="#wy-main-nav-menu" class="wy-main-nav-menu">
-        <li><a href="https://cilium.io/enterprise/">Enterprise</a></li>
+        <li><a class="w3-hover-text-blue" href="https://cilium.io/enterprise/">Enterprise</a></li>
         <li>
           <div style="background-color: white; font-size: 16px; font-weight: 600; margin-left: 40px" class="w3-dropdown-hover">
-            <button class="w3-button">Learn <span class="triangle">▾</span></button>
+            <button class="w3-button w3-white w3-hover-white w3-hover-text-blue">Learn <span class="triangle">▾</span></button>
             <div class="w3-dropdown-content w3-bar-block w3-card-4">
-              <a style = "margin-left: 0px; display: inline-flex;" href="https://cilium.io/get-started" class="w3-bar-item w3-button">
-                <img style="height: 1.5em; margin-right: .5em" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/get-started.inline.svg" alt="get-started-icon">
+              <a style = "margin-left: 0px; display: inline-flex;" href="https://cilium.io/get-started" class="w3-bar-item w3-button w3-hover-white w3-hover-text-blue">
+                <img style="height: 1.5em; margin-right: .5em" src="/docs/_static/icons/get-started.inline.svg" alt="get-started-icon">
                 Get Started
               </a>
-              <a style = "margin-left: 0px; display: inline-flex;" href="https://cilium.io/get-involved" class="w3-bar-item w3-button">
-                <img style="height: 1.5em; margin-right: .5em" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/get-involved.inline.svg" alt="get-involved-icon">
+              <a style = "margin-left: 0px; display: inline-flex;" href="https://cilium.io/get-involved" class="w3-bar-item w3-button w3-hover-white w3-hover-text-blue">
+                <img style="height: 1.5em; margin-right: .5em" src="/docs/_static/icons/get-involved.inline.svg" alt="get-involved-icon">
                 Get Involved
               </a>
-              <a style = "margin-left: 0px; display: inline-flex;" href="https://cilium.io/get-help" class="w3-bar-item w3-button">
-                <img style="height: 1.5em; margin-right: .5em" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/get-help.inline.svg" alt="get-help-icon">
+              <a style = "margin-left: 0px; display: inline-flex;" href="https://cilium.io/get-help" class="w3-bar-item w3-button w3-hover-white w3-hover-text-blue">
+                <img style="height: 1.5em; margin-right: .5em" src="/docs/_static/icons/get-help.inline.svg" alt="get-help-icon">
                 Get Help
               </a>
             </div>
@@ -216,29 +216,29 @@
         </li>
         <li>
           <div style="background-color: white; font-size: 16px;font-weight: 600; margin-left: 40px" class="w3-dropdown-hover">
-            <button class="w3-button">News and media <span class="triangle">▾</span></i></button>
+            <button class="w3-button w3-white w3-hover-white w3-hover-text-blue">News and media <span class="triangle">▾</span></i></button>
             <div class="w3-dropdown-content w3-bar-block w3-card-4">
-              <a style = "margin-left: 0px; display: inline-flex;" href="https://cilium.io/adopters" class="w3-bar-item w3-button">
-                <img style="height: 1.5em; margin-right: .5em" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/adopters.inline.svg" alt="adopters-icon">
+              <a style = "margin-left: 0px; display: inline-flex;" href="https://cilium.io/adopters" class="w3-bar-item w3-button w3-hover-white w3-hover-text-blue">
+                <img style="height: 1.5em; margin-right: .5em" src="/docs/_static/icons/adopters.inline.svg" alt="adopters-icon">
                 Adopters
               </a>
-              <a style = "margin-left: 0px; display: inline-flex;" href="https://cilium.io/blog" class="w3-bar-item w3-button">
-                <img style="height: 1.5em; margin-right: .5em" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/blog.inline.svg" alt="blog-icon">
+              <a style = "margin-left: 0px; display: inline-flex;" href="https://cilium.io/blog" class="w3-bar-item w3-button w3-hover-white w3-hover-text-blue">
+                <img style="height: 1.5em; margin-right: .5em" src="/docs/_static/icons/blog.inline.svg" alt="blog-icon">
                 Blog
               </a>
-              <a style = "margin-left: 0px; display: inline-flex;" href="https://github.com/cncf/artwork/blob/master/examples/incubating.md#cilium-logos" class="w3-bar-item w3-button">
-                <img style="height: 1.5em; margin-right: .5em" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/branding.inline.svg" alt="branding-icon">
+              <a style = "margin-left: 0px; display: inline-flex;" href="https://github.com/cncf/artwork/blob/master/examples/incubating.md#cilium-logos" class="w3-bar-item w3-button w3-hover-white w3-hover-text-blue">
+                <img style="height: 1.5em; margin-right: .5em" src="/docs/_static/icons/branding.inline.svg" alt="branding-icon">
                 Branding
               </a>
-              <a style = "margin-left: 0px; display: inline-flex;" href="https://cilium.io/newsletter" class="w3-bar-item w3-button">
-                <img style="height: 1.5em; margin-right: .5em" src="https://raw.githubusercontent.com/cilium/sphinx_rtd_theme/v1.0/docs/_static/icons/newsletter.inline.svg" alt="newsletter-icon">
+              <a style = "margin-left: 0px; display: inline-flex;" href="https://cilium.io/newsletter" class="w3-bar-item w3-button w3-hover-white w3-hover-text-blue">
+                <img style="height: 1.5em; margin-right: .5em" src="/docs/_static/icons/newsletter.inline.svg" alt="newsletter-icon">
                 Newsletter
               </a>
             </div>
           </div>
 
         </li>
-        <li><a href="https://docs.cilium.io/en/stable/">Documentation</a></li>
+        <li><a class="w3-hover-text-blue" href="https://docs.cilium.io/en/stable/">Documentation</a></li>
       </ul>
     </nav>
   </header>
